# github-mail-scraper

./: .gitignore  Dockerfile  README.md  continuous_scraper.ps1  pyproject.toml  quickstart.sh  requirements.txt  run_scraper.bat
examples/: __init__.py  fetch_example.py
src/scraper/: __init__.py  cli.py  fetcher.py  parser.py  storage.py
tests/: test_parser.py  test_storage.py
